# is312_tp

./: README.md  create-post.css  create-post.html  create-post.js  edit-post.css  edit-post.html  global.css  global.js  home.css  home.html  index.html  login-signup.css  login.css  login.html  login.js  sign-up.html  sign-up.js  view-post.css  view-post.html  view-post.js  view-user.css  view-user.html  view-user.js
server/: Cargo.toml
server/src/: apis.rs  db.rs  main.rs  mws.rs  session.rs
server/src/apis/: change_pwd.rs  edit_post.rs  login.rs  posts.rs  require_auth_mw.rs  search_post.rs  signout.rs  signup.rs  user.rs  view_post.rs
server/src/mws/: require_auth.rs
server/src/session/: cookie.rs
server/tests/: quick_dev.rs
server/web/: create-post.css  create-post.html  create-post.js  edit-post.css  edit-post.html  edit-post.js  global.css  global.js  home.css  home.html  home.js  login-signup.css  login.html  login.js  sign-up.html  sign-up.js  view-post.css  view-post.html  view-post.js  view-user.html  view-user.js
