[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.80"
httpc-test = "0.1.9"
